compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__anon_external_fun_name_escaping.snap
---
source: compiler-core/src/erlang/tests/variables.rs
expression: "\n@external(erlang, \"one.two\", \"three.four\")\nfn func() -> Nil\n\npub fn main() {\n  func\n}"
---
----- SOURCE CODE

@external(erlang, "one.two", "three.four")
fn func() -> Nil

pub fn main() {
  func
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> fun(() -> nil).
main() ->
    fun 'one.two':'three.four'/0.
