compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__blocks_are_scopes.snap
---
source: compiler-core/src/erlang/tests/variables.rs
expression: "\npub fn main() {\n  let x = 1\n  {\n    let x = 2\n  }\n  x\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let x = 1
  {
    let x = 2
  }
  x
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    X = 1,
    begin
        X@1 = 2
    end,
    X.
