compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__discarded.snap
---
source: compiler-core/src/erlang/tests/variables.rs
expression: "pub fn go() {\n  let _r = 1\n  let _r = 2\n  Nil\n}"
---
----- SOURCE CODE
pub fn go() {
  let _r = 1
  let _r = 2
  Nil
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> nil.
go() ->
    _ = 1,
    _ = 2,
    nil.
