compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__shadow_pipe.snap
---
source: compiler-core/src/erlang/tests/variables.rs
expression: "\npub fn main(x) {\n  x\n  |> fn(x) { x }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  x
  |> fn(x) { x }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(K) -> K.
main(X) ->
    _pipe = X,
    fun(X@1) ->
        X@1
    end(_pipe).
